; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_get_colour_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_get_colour_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwc_device = type { i32 }

@GET_CHROM_CTL = common dso_local global i32 0, align 4
@COLOUR_MODE_FORMATTER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pwc_get_colour_mode(%struct.pwc_device* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pwc_device*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  store %struct.pwc_device* %0, %struct.pwc_device** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %9 = load i32, i32* @GET_CHROM_CTL, align 4
  %10 = load i32, i32* @COLOUR_MODE_FORMATTER, align 4
  %11 = call i32 @recv_control_msg(%struct.pwc_device* %8, i32 %9, i32 %10, i8* %7, i32 1)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %23

16:                                               ; preds = %2
  %17 = load i8, i8* %7, align 1
  %18 = icmp ne i8 %17, 0
  %19 = xor i1 %18, true
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = load i32*, i32** %5, align 8
  store i32 %21, i32* %22, align 4
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @recv_control_msg(%struct.pwc_device*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
